--- a/app_permissions/app_perm.html
+++ b/app_permissions/app_perm.html
@@ -56,8 +56,8 @@
 
     <!--  ----------------   FOOTER    ----------------  -->
     <div class="footer">
-        <div id="cancel_permapp" class="f_link01"><a href="#">CANCEL</a></div>
-        <div id="accept_permapp" class="f_link02"><a href="#">APPROVE</a></div>
+        <div id="cancel_permapp" class="f_link01"><a>CANCEL</a></div>
+        <div id="accept_permapp" class="f_link02"><a>APPROVE</a></div>
     </div>
     <!--  --------------   end- FOOTER    ------------  -->
 
