--- a/user_permissions/openi_settings.html
+++ b/user_permissions/openi_settings.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>OPENi</title>
-    <link href="openi.css" rel="stylesheet" type="text/css">
+    <link href="css/openi.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
             <div class="rv_cont">
                 <div class="rv_text">Let apps access my profile such as name, picture and other account information.
                 </div>
-                <div class="rv_link"><a href="my_profile.html">See more...</a></div>
+                <div class="rv_link"><a href="submenus/openi_profile.html">See more...</a></div>
                 <div class="clearfix"></div>
             </div>
         </div>
@@ -59,7 +59,7 @@
             <div class="rv_cont">
                 <div class="rv_text">Let apps access my profile such as name, picture and other account information.
                 </div>
-                <div class="rv_link"><a href="my_profile.html">See more...</a></div>
+                <div class="rv_link"><a href="submenus/openi_profile.html">See more...</a></div>
                 <div class="clearfix"></div>
             </div>
         </div>
@@ -70,7 +70,7 @@
                     for="checkboxG2" class="css-label"></label></div>
             <div class="rv_cont">
                 <div class="rv_text">Let apps use my online wallet accounts</div>
-                <div class="rv_link"><a href="openi_wallet.html">See more...</a></div>
+                <div class="rv_link"><a href="submenus/openi_wallet.html">See more...</a></div>
 
             </div>
         </div>
@@ -101,7 +101,7 @@
                     for="checkboxG5" class="css-label"></label></div>
             <div class="rv_cont">
                 <div class="rv_text">Let apps use my media.</div>
-                <div class="rv_link"><a href="my_media.html">See more...</a></div>
+                <div class="rv_link"><a href="submenus/openi_media.html">See more...</a></div>
             </div>
         </div>
 
@@ -134,7 +134,7 @@
                     for="checkboxG8" class="css-label"></label></div>
             <div class="rv_cont">
                 <div class="rv_text">Let apps use my services and product information.</div>
-                <div class="rv_link"><a href="openi_product.html">See more...</a></div>
+                <div class="rv_link"><a href="submenus/openi_product.html">See more...</a></div>
             </div>
         </div>
 
@@ -145,7 +145,7 @@
                     for="checkboxG9" class="css-label"></label></div>
             <div class="rv_cont">
                 <div class="rv_text">Let apps access my health profile information</div>
-                <div class="rv_link"><a href="openi_healthfactors.html">See more...</a></div>
+                <div class="rv_link"><a href="submenus/openi_healthfactors.html">See more...</a></div>
             </div>
         </div>
 
@@ -211,7 +211,7 @@
                 </div>
 
                 <div class="rv_text">More details can be found under;</div>
-                <div class="rv_link"><a href="my_locations.html">See more...</a></div>
+                <div class="rv_link"><a href="submenus/openi_locations.html">See more...</a></div>
             </div>
         </div>
 
