--- a/user_permissions/submenus/openi_healthfactors.html
+++ b/user_permissions/submenus/openi_healthfactors.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>OPENi</title>
-    <link href="openi.css" rel="stylesheet" type="text/css">
+    <link href="../css/openi.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -11,24 +11,24 @@
 
     <!--  ----------------   Header    ----------------  -->
     <div class="header">
-        <div class="h_icon"><img src="images/settings_icon.png" width="42" height="42" /></div>
+        <div class="h_icon"><img src="../images/settings_icon.png" width="42" height="42" /></div>
         <div class="title">SETTINGS</div>
-        <div class="main_action"><a href="settings.html">DONE</a></div>
+        <div class="main_action"><a href="../openi_settings.html">DONE</a></div>
     </div>
     <!--  --------------   end- Header    ------------  -->
 
     <!--  ----------------   TOP    ----------------  -->
     <div class="top">
-        <div class="sub_title_b"><img src="images/arrow.png" width="30" height="30" border="0" align="absmiddle" /> OPENi</div>
+        <div class="sub_title_b"><img src="../images/arrow.png" width="30" height="30" border="0" align="absmiddle" /> OPENi</div>
     </div>
     <!--  -------------   end - TOP    ------------  -->
 
     <!--  ----------------   cont_main    ----------------  -->
     <div class="cont_main">
-        <div class="rv_title">Product & Services</div>
+        <div class="rv_title">Health Factors & Condition</div>
         <div class="rv_check"><input type="checkbox" name="checkboxG1" id="checkboxG0" class="css-checkbox" /><label for="checkboxG1" class="css-label"></label></div>
         <div class="rv_cont">
-            <div class="rv_text">Let apps use my services and product information.</div>
+            <div class="rv_text">Let apps access my health profile information.</div>
             <div class="rv_text pad_T15">Assign the following alterations to:</div>
             <div class="clearfix"></div>
         </div>
@@ -36,33 +36,33 @@
     <!--  ----------------   end - cont_main    ----------------  -->
 
     <!--  ----------------   buttons    ----------------  -->
-    <div class="action_ca" align="center" style="margin-bottom: 20px"><a href="#"><img src="images/current_app_on.png" width="582" height="47" border="0" /></a></div>
+    <div class="action_ca" align="center" style="margin-bottom: 20px"><a href="#"><img src="../images/current_app_on.png" width="582" height="47" border="0" /></a></div>
     <!--  --------------   end- buttons    ------------  -->
 
 
 
 
     <!--  ----------------   acc    ----------------  -->
-    <div class="acc_b" id="openi_card">
-        <div class="acc_title_d"><img src="images/reviews.png" width="29" height="41" align="absmiddle" /> &nbsp; Card</div>
+    <div class="acc_b" id="openi_measurement">
+        <div class="acc_title_d"><img src="../images/reviews.png" width="29" height="41" align="absmiddle" /> &nbsp; Measurement</div>
         <div class="ac_check"><input type="checkbox" name="checkboxG3" id="checkboxG1" class="css-checkbox" /><label for="checkboxG3" class="css-label"></label></div>
     </div>
     <div class="clearfix"></div>
 
 
 
-    <div class="acc_b" id="openi_product">
-        <div class="acc_title_d"><img src="images/reviews.png" width="29" height="41" align="absmiddle" /> &nbsp; Product</div>
+    <div class="acc_b" id="openi_nutrition">
+        <div class="acc_title_d"><img src="../images/reviews.png" width="29" height="41" align="absmiddle" /> &nbsp; Nutrition</div>
         <div class="ac_check"><input type="checkbox" name="checkboxG3" id="checkboxG2" class="css-checkbox" /><label for="checkboxG3" class="css-label"></label></div>
     </div>
 
-    <div class="acc_b" id="openi_service">
-        <div class="acc_title_d"><img src="images/reviews.png" width="29" height="41" align="absmiddle" /> &nbsp; Service</div>
+    <div class="acc_b" id="openi_workout">
+        <div class="acc_title_d"><img src="../images/reviews.png" width="29" height="41" align="absmiddle" /> &nbsp; Workout</div>
         <div class="ac_check"><input type="checkbox" name="checkboxG3" id="checkboxG3" class="css-checkbox" /><label for="checkboxG3" class="css-label"></label></div>
     </div>
 
-    <div class="acc_b" id="openi_shop">
-        <div class="acc_title_d"><img src="images/reviews.png" width="29" height="41" align="absmiddle" /> &nbsp; Shop</div>
+    <div class="acc_b" id="openi_sleep">
+        <div class="acc_title_d"><img src="../images/reviews.png" width="29" height="41" align="absmiddle" /> &nbsp; Sleep</div>
         <div class="ac_check"><input type="checkbox" name="checkboxG3" id="checkboxG4" class="css-checkbox" /><label for="checkboxG3" class="css-label"></label></div>
     </div>
 
@@ -91,11 +91,11 @@
 </div>
 
 
-<script src="js/jquery-1.11.1.min.js"></script>
+<script src="../js/jquery-1.11.1.min.js"></script>
 <script src="https://demo2.openi-ict.eu/api-docs/lib/shred.bundle.js"></script>
 <script src="https://demo2.openi-ict.eu/api-docs/lib/swagger.js"></script>
-<script src="js/init.js"></script>
-<script src="js/openi_media.js"></script>
+<script src="../js/init.js"></script>
+<script src="../js/openi_media.js"></script>
 
 </body>
 </html>
