--- a/user_permissions/submenus/openi_wallet.html
+++ b/user_permissions/submenus/openi_wallet.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>OPENi</title>
-    <link href="openi.css" rel="stylesheet" type="text/css">
+    <link href="../css/openi.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -11,15 +11,15 @@
 
     <!--  ----------------   Header    ----------------  -->
     <div class="header">
-        <div class="h_icon"><img src="images/settings_icon.png" width="42" height="42" /></div>
+        <div class="h_icon"><img src="../images/settings_icon.png" width="42" height="42" /></div>
         <div class="title">SETTINGS</div>
-        <div class="main_action"><a href="settings.html">DONE</a></div>
+        <div class="main_action"><a href="../openi_settings.html">DONE</a></div>
     </div>
     <!--  --------------   end- Header    ------------  -->
 
     <!--  ----------------   TOP    ----------------  -->
     <div class="top">
-        <div class="sub_title_b"><img src="images/arrow.png" width="30" height="30" border="0" align="absmiddle" /> OPENi</div>
+        <div class="sub_title_b"><img src="../images/arrow.png" width="30" height="30" border="0" align="absmiddle" /> OPENi</div>
     </div>
     <!--  -------------   end - TOP    ------------  -->
 
@@ -36,7 +36,7 @@
     <!--  ----------------   end - cont_main    ----------------  -->
 
     <!--  ----------------   buttons    ----------------  -->
-    <div class="action_ca" align="center" style="margin-bottom: 20px"><a href="#"><img src="images/current_app_on.png" width="582" height="47" border="0" /></a></div>
+    <div class="action_ca" align="center" style="margin-bottom: 20px"><a href="#"><img src="../images/current_app_on.png" width="582" height="47" border="0" /></a></div>
     <!--  --------------   end- buttons    ------------  -->
 
 
@@ -44,7 +44,7 @@
 
     <!--  ----------------   acc    ----------------  -->
     <div class="acc_b" id="openi_paypal">
-        <div class="acc_title_d"><img src="images/reviews.png" width="29" height="41" align="absmiddle" /> &nbsp; Paypal</div>
+        <div class="acc_title_d"><img src="../images/reviews.png" width="29" height="41" align="absmiddle" /> &nbsp; Paypal</div>
         <div class="ac_check"><input type="checkbox" name="checkboxG3" id="checkboxG2" class="css-checkbox" /><label for="checkboxG3" class="css-label"></label></div>
     </div>
     <div class="clearfix"></div>
@@ -52,7 +52,7 @@
 
 
     <div class="acc_b" id="openi_googlecheck">
-        <div class="acc_title_d"><img src="images/reviews.png" width="29" height="41" align="absmiddle" /> &nbsp; Google Checkout</div>
+        <div class="acc_title_d"><img src="../images/reviews.png" width="29" height="41" align="absmiddle" /> &nbsp; Google Checkout</div>
         <div class="ac_check"><input type="checkbox" name="checkboxG3" id="checkboxG3" class="css-checkbox" /><label for="checkboxG3" class="css-label"></label></div>
     </div>
 
@@ -81,11 +81,11 @@
 </div>
 
 
-<script src="js/jquery-1.11.1.min.js"></script>
+<script src="../js/jquery-1.11.1.min.js"></script>
 <script src="https://demo2.openi-ict.eu/api-docs/lib/shred.bundle.js"></script>
 <script src="https://demo2.openi-ict.eu/api-docs/lib/swagger.js"></script>
-<script src="js/init.js"></script>
-<script src="js/openi_media.js"></script>
+<script src="../js/init.js"></script>
+<script src="../js/openi_media.js"></script>
 
 </body>
 </html>
