--- a/demo-js/index.html
+++ b/demo-js/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     Hello OPENi!!!
-    <button onclick="redirectToOPENiUserPermissions('velti')" style="display: block;margin-top: 10px;">Go to User Permissions</button>
+    <button onclick="redirectToOPENiUserPermissions('velti', window.location.href)" style="display: block;margin-top: 10px;">Go to User Permissions</button>
 </body>
 </html>
