--- a/user_permissions/openi_settings.html
+++ b/user_permissions/openi_settings.html
@@ -14,7 +14,7 @@
     <div class="header">
         <div class="h_icon"><img src="images/settings_icon.png" width="42" height="42"/></div>
         <div class="title">SETTINGS</div>
-        <div class="main_action"><a href="#">DONE</a></div>
+        <div class="main_action"><a id="perm_done">DONE</a></div>
     </div>
     <!--  --------------   end- Header    ------------  -->
 
