correct img src url

--- a/permissions_visualization/directives/setting/setting_types.html
+++ b/permissions_visualization/directives/setting/setting_types.html
@@ -5,7 +5,7 @@
              ng-show="t.display"
              ng-class="{'grayedOut': t.hasObjects === false}">
             <div class="acc_title_d">
-                <img src="../images/reviews.png" width="29" height="41" align="absmiddle" />
+                <img src="images/reviews.png" width="29" height="41" align="absmiddle" />
                 &nbsp;
                 {{t.label}}
             </div>
