--- a/permissions_visualization/directives/setting/setting_header.html
+++ b/permissions_visualization/directives/setting/setting_header.html
@@ -2,7 +2,7 @@
 
     <div class="header">
         <div class="h_icon">
-            <img src="../../images/settings_icon.png" width="42" height="42" />
+            <img src="images/settings_icon.png" width="42" height="42" />
         </div>
         <div class="title">
             SETTINGS
@@ -17,7 +17,7 @@
     <a href="#/permission_visualization">
         <div class="top">
             <div class="sub_title_b">
-                <img src="../images/arrow.png" width="30" height="30" border="0" align="absmiddle" />
+                <img src="images/arrow.png" width="30" height="30" border="0" align="absmiddle" />
                 OPENi
             </div>
         </div>
