--- a/permissions_visualization/index.html
+++ b/permissions_visualization/index.html
@@ -29,9 +29,8 @@
         <script src="bower_components/angular-spinner/angular-spinner.js"></script>
         <script src="bower_components/angular-loading-spinner/angular-loading-spinner.js"></script>
 
-
-        <script src='shred.bundle.js' type='text/javascript'></script>
-        <script src='swagger-client.js' type='text/javascript'></script>
+        <script src='js_libs/shred.bundle.js' type='text/javascript'></script>
+        <script src='js_libs/swagger-client.js' type='text/javascript'></script>
 
         <script src="openi_swagger/initSwagger.js"></script>
 
