--- a/permissions_visualization/modules/permission_visualization/permission_visualization.html
+++ b/permissions_visualization/modules/permission_visualization/permission_visualization.html
@@ -1,6 +1,6 @@
 <span>
 
-    <span us-spinner="{radius:30, width:8, length: 16}"></span>
+    <span us-spinner="{radius:30, width:8, length: 16}" ng-show="!isReady"></span>
 
     <div class="header">
         <div class="h_icon"><img src="images/settings_icon.png" width="42" height="42"/></div>
