add leave function to return the the app page

--- a/permissions_visualization/modules/permission_visualization/permission_visualization.html
+++ b/permissions_visualization/modules/permission_visualization/permission_visualization.html
@@ -5,7 +5,11 @@
     <div class="header">
         <div class="h_icon"><img src="images/settings_icon.png" width="42" height="42"/></div>
         <div class="title">SETTINGS</div>
-        <div class="main_action"><a id="perm_done">DONE</a></div>
+        <div class="main_action">
+            <a href="javascript:void(0)" ng-click="leave()">
+                DONE
+            </a>
+        </div>
     </div>
 
     <div class="top">
