--- a/permissions_visualization/directives/setting/setting_footer.html
+++ b/permissions_visualization/directives/setting/setting_footer.html
@@ -9,7 +9,7 @@
         </div>
 
         <div class="f_link02">
-            <a href="#">
+            <a href="javascript:void(0)" ng-click="leave()">
                 SIGN OUT
             </a>
         </div>
