correct the home and signout functionality in the settings pages

--- a/permissions_visualization/directives/setting/setting_footer.html
+++ b/permissions_visualization/directives/setting/setting_footer.html
@@ -3,7 +3,7 @@
     <div class="footer">
 
         <div class="f_link01">
-            <a href="javascript:void(0)" ng-click="leavePermissionVisualization()">
+            <a href="javascript:void(0)" ng-click="redirectToHome()">
                 HOME
             </a>
         </div>
